--- a/src/pages/Base.scss
+++ b/src/pages/Base.scss
@@ -11,21 +11,21 @@
     height: auto;
 }
 .content {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     @media only screen and (max-width: 860px) {
         flex-direction: column;
     }
 }
 .side-bar {
-    height: 100vh;
-    overflow-y: scroll;
-    width: fit-content;
+    max-height: 100vh;
+    overflow-y: hidden;
+    width: 15%;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.04);
     @media only screen and (max-width: 860px) {
-        overflow-x: auto;
-        max-width: 100%;
+        overflow-y: auto;
+        width: 100%;
         height: 10%;
     }
 }
@@ -33,4 +33,6 @@
 .display {
     display: flex;
     flex: 1;
+    max-height: 100%;
+    overflow-y: scroll;
 }
