--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -75,3 +75,13 @@ table {
         }
     }
 }
+.status {
+    p {
+        color: #e4033b;
+        background-color: #e4033b10;
+        border-radius: 100px;
+        text-align: center;
+        width: fit-content;
+        padding: 7px 12px;
+    }
+}
