--- a/src/pages/UserDetails/UserDetails.scss
+++ b/src/pages/UserDetails/UserDetails.scss
@@ -16,23 +16,25 @@
         margin-top: 20px;
         font-style: normal;
         font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
+        font-size: 19px;
+        line-height: 21px;
         /* identical to box height */
 
         color: #213f7d;
     }
     .two {
+        height: 150px;
         display: flex;
         flex-wrap: wrap;
         gap: 90px;
         justify-content: flex-start;
+        align-items: center;
         padding-bottom: 20px;
         border-bottom: 1px solid #213f7d10;
-        div{
+        .inner-info {
             display: flex;
             flex-direction: column;
-            gap: none;
+            gap: 0px;
         }
         .title {
             padding: 0;
@@ -52,7 +54,7 @@
             font-size: 16px;
             line-height: 19px;
             /* identical to box height */
-
+            margin-bottom: 10px;
             color: #545f7d;
         }
     }
@@ -236,8 +238,8 @@
         }
     }
 }
-.last{
-    .two{
+.last {
+    .two {
         border: none;
     }
 }
